--- a/grud/index.html
+++ b/grud/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página de cadastro de produtos da Sua Empresa. Cadastre novos produtos para sua loja online.">
     <meta name="keywords" content="cadastro de produtos, produtos, loja online, Sua Empresa">
-    <title>Cadastro de Produtos - Sua Empresa</title>
+    <title>Cadastro de Produtos - Detona RH</title>
     <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
@@ -32,16 +33,15 @@
         <section class="container">
             <h2>Produtos</h2>
             <ul id="productList">
-                <!-- Aqui serão exibidos os produtos cadastrados -->
+
             </ul>
             <div>
                 <input type="text" id="searchInput" placeholder="Pesquisar por nome do produto">
-                <button>Pesquisar</button>
+                <button id="botao-pesquisar">Pesquisar</button>
             </div>
             <div>
                 <label for="criteriaSelect">Pesquisar por critérios:</label>
                 <select id="criteriaSelect">
-                    <option value="name">Nome do Produto</option>
                     <option value="price">Preço do Produto</option>
                     <option value="quantity">Quantidade</option>
                 </select>
