--- a/grud/index.html
+++ b/grud/index.html
@@ -30,6 +30,7 @@
         <button type="submit" id="botaoCadastrar">Cadastrar Produto</button>
         </section>
 
+       
         <section class="container">
             <h2>Produtos</h2>
             <ul id="productList">
@@ -38,7 +39,9 @@
             <div>
                 <input type="text" id="searchInput" placeholder="Pesquisar por nome do produto">
                 <button id="botao-pesquisar">Pesquisar</button>
+                <button id="deltar-produto">deletar produto</button>
             </div>
+          
             <div>
                 <label for="criteriaSelect">Pesquisar por critérios:</label>
                 <select id="criteriaSelect">
@@ -46,7 +49,7 @@
                     <option value="quantity">Quantidade</option>
                 </select>
                 <input type="text" id="criteriaInput">
-                <button onclick="searchByCriteria()">Pesquisar</button>
+                <button >Pesquisar</button>
             </div>
         </section>
 
