funcao de limpar dados colocada

--- a/grud/index.html
+++ b/grud/index.html
@@ -40,7 +40,8 @@
                         <th>Nome do Produto</th>
                         <th>Preço</th>
                         <th>Quantidade</th>
-                        <th>data de cadastramento</th>
+                        <th>Data de cadastramento</th>
+                        <th>imagem do produto</th>
                         <th>Deletar produto</th>
                       </tr>
                     </thead>
@@ -50,6 +51,7 @@
                         <td data-label="Preço"></td>
                         <td data-label="Quantidade"></td>
                         <td data-label="data"></td>
+                        <td data-label="imagem do produto"><img src="" alt="produto" class="imagemDoProduto"></td>
                         <td data-label="Deletar produto"><button class="delete-button" id="deltar-produto">Deletar</button></td>
                       </tr>
                     </tbody>
