--- a/grud/index.html
+++ b/grud/index.html
@@ -27,10 +27,14 @@
             <label for="productQuantity">Quantidade:</label>
             <input type="number" id="productQuantity" name="productQuantity" min="0" step="1" >
         </div>
+        <div class="form-group">
+            <label for="productImage">Categoria do produto:</label>
+            <input type="text" id="categoriaProdutos">
+        </div>
         <button type="submit" id="botaoCadastrar">Cadastrar Produto</button>
         </section>
 
-       
+
         <section class="container">     
         <section class="container">
             <h2>Produtos Cadastrados</h2>
