adicionado categoria do produto

--- a/grud/index.html
+++ b/grud/index.html
@@ -29,7 +29,33 @@
         </div>
         <div class="form-group">
             <label for="productImage">Categoria do produto:</label>
-            <input type="text" id="categoriaProdutos">
+            <select id="categoriaAlimentos">
+                <option value="">Selecione uma categoria...</option>
+                <option value="Frutas frescas">Frutas frescas</option>
+                <option value="Vegetais frescos">Vegetais frescos</option>
+                <option value="Carnes e aves">Carnes e aves</option>
+                <option value="Peixes e frutos do mar">Peixes e frutos do mar</option>
+                <option value="Produtos lácteos">Produtos lácteos</option>
+                <option value="Ovos">Ovos</option>
+                <option value="Grãos e cereais">Grãos e cereais</option>
+                <option value="Pães e produtos de panificação">Pães e produtos de panificação</option>
+                <option value="Massas e arroz">Massas e arroz</option>
+                <option value="Oleaginosas e sementes">Oleaginosas e sementes</option>
+                <option value="Óleos e gorduras">Óleos e gorduras</option>
+                <option value="Açúcares e adoçantes">Açúcares e adoçantes</option>
+                <option value="Bebidas não alcoólicas">Bebidas não alcoólicas</option>
+                <option value="Bebidas alcoólicas">Bebidas alcoólicas</option>
+                <option value="Produtos processados">Produtos processados</option>
+                <option value="Snacks e petiscos">Snacks e petiscos</option>
+                <option value="Condimentos e temperos">Condimentos e temperos</option>
+                <option value="Conservas e enlatados">Conservas e enlatados</option>
+                <option value="Congelados">Congelados</option>
+                <option value="Produtos orgânicos">Produtos orgânicos</option>
+                <option value="Produtos sem glúten">Produtos sem glúten</option>
+                <option value="Produtos sem lactose">Produtos sem lactose</option>
+                <option value="Produtos vegetarianos / veganos">Produtos vegetarianos / veganos</option>
+                <option value="Suplementos alimentares">Suplementos alimentares</option>
+              </select>
         </div>
         <button type="submit" id="botaoCadastrar">Cadastrar Produto</button>
         </section>
@@ -69,8 +95,31 @@
             <div>
                 <label for="criteriaSelect">Pesquisar por critérios:</label>
                 <select id="criteriaSelect">
-                    <option value="price">Preço do Produto</option>
-                    <option value="quantity">Quantidade</option>
+                    <option value="">Selecione uma categoria...</option>
+                    <option value="Frutas frescas">Frutas frescas</option>
+                    <option value="Vegetais frescos">Vegetais frescos</option>
+                    <option value="Carnes e aves">Carnes e aves</option>
+                    <option value="Peixes e frutos do mar">Peixes e frutos do mar</option>
+                    <option value="Produtos lácteos">Produtos lácteos</option>
+                    <option value="Ovos">Ovos</option>
+                    <option value="Grãos e cereais">Grãos e cereais</option>
+                    <option value="Pães e produtos de panificação">Pães e produtos de panificação</option>
+                    <option value="Massas e arroz">Massas e arroz</option>
+                    <option value="Oleaginosas e sementes">Oleaginosas e sementes</option>
+                    <option value="Óleos e gorduras">Óleos e gorduras</option>
+                    <option value="Açúcares e adoçantes">Açúcares e adoçantes</option>
+                    <option value="Bebidas não alcoólicas">Bebidas não alcoólicas</option>
+                    <option value="Bebidas alcoólicas">Bebidas alcoólicas</option>
+                    <option value="Produtos processados">Produtos processados</option>
+                    <option value="Snacks e petiscos">Snacks e petiscos</option>
+                    <option value="Condimentos e temperos">Condimentos e temperos</option>
+                    <option value="Conservas e enlatados">Conservas e enlatados</option>
+                    <option value="Congelados">Congelados</option>
+                    <option value="Produtos orgânicos">Produtos orgânicos</option>
+                    <option value="Produtos sem glúten">Produtos sem glúten</option>
+                    <option value="Produtos sem lactose">Produtos sem lactose</option>
+                    <option value="Produtos vegetarianos / veganos">Produtos vegetarianos / veganos</option>
+                    <option value="Suplementos alimentares">Suplementos alimentares</option>
                 </select>
                 <input type="number" id="criteriaInput">
                 <button id="botao-pequisar-criterios">Pesquisar</button>
