adicionado parte de aparecer a lista de produtos filtrados

--- a/grud/index.html
+++ b/grud/index.html
@@ -129,11 +129,11 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td data-label="Nome do Produto"></td>
-                        <td data-label="Preço"></td>
-                        <td data-label="Quantidade"></td>
-                        <td data-label="data"></td>
+                      <tr id="teste">
+                        <td data-label="Nome do Produto" id="nomeProduto"></td>
+                        <td data-label="Preço" id="tdExibirPreco"></td>
+                        <td data-label="Quantidade" id="tdQuantidadeProduto"></td>
+                        <td data-label="data" id="dataDoMeuProduto"></td>
                       </tr>
                     </tbody>
                   </table>
