classe adicionada aos tds

--- a/grud/index.html
+++ b/grud/index.html
@@ -70,7 +70,7 @@
                         <th>Nome do Produto</th>
                         <th>Preço</th>
                         <th>Quantidade</th>
-                        <th>Data de cadastramento</th>
+                        <th>Hora de cadastramento</th>
                         <th>Deletar produto</th>
                       </tr>
                     </thead>
@@ -125,7 +125,7 @@
                         <th>Nome do Produto</th>
                         <th>Preço</th>
                         <th>Quantidade</th>
-                        <th>Data de cadastramento</th>
+                        <th>Hora de cadastramento</th>
                       </tr>
                     </thead>
                     <tbody>
