--- a/grud/index.html
+++ b/grud/index.html
@@ -29,6 +29,10 @@
             <input type="number" id="productQuantity" name="productQuantity" min="0" step="1" >
         </div>
         <div class="form-group">
+          <label for="productQuantity">descrição do produto:</label>
+          <textarea name="descricao" id="descricao" cols="30" rows="10"></textarea>
+      </div>
+        <div class="form-group">
             <label for="productImage">Categoria do produto:</label>
             <select id="categoriaAlimentos">
                 <option value="">Selecione uma categoria...</option>
@@ -72,6 +76,7 @@
                         <th>Preço</th>
                         <th>Quantidade</th>
                         <th>Hora de cadastramento</th>
+                        <th>descrição do produto</th>
                         <th>Deletar produto</th>
                       </tr>
                     </thead>
@@ -81,6 +86,7 @@
                         <td data-label="Preço"></td>
                         <td data-label="Quantidade"></td>
                         <td data-label="data"></td>
+                        <td data-label="descricao"></td>
                         <td data-label="Deletar produto"><button class="delete-button" id="deltar-produto">Deletar</button></td>
                       </tr>
                     </tbody>
@@ -144,11 +150,7 @@
         </section>
     </main>
     <footer>
-       
     </footer>
-
-
-
     <script type="module" src="src/main.ts"></script>
 </body>
 </html>
