algumas partes separadass por funcoes

--- a/grud/index.html
+++ b/grud/index.html
@@ -86,7 +86,7 @@
                         <td data-label="Preço"></td>
                         <td data-label="Quantidade"></td>
                         <td data-label="data"></td>
-                        <td data-label="descricao"></td>
+                        <td data-label="descricao"><textarea name="exibir" id="exibir" cols="20" rows="10"></textarea></td>
                         <td data-label="Deletar produto"><button class="delete-button" id="deltar-produto">Deletar</button></td>
                       </tr>
                     </tbody>
