agora deleta da tabela

--- a/grud/index.html
+++ b/grud/index.html
@@ -134,6 +134,7 @@
                         <th>Preço</th>
                         <th>Quantidade</th>
                         <th>Hora de cadastramento</th>
+                        <th>Deletar produto</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -142,6 +143,7 @@
                         <td data-label="Preço" id="tdExibirPreco"></td>
                         <td data-label="Quantidade" id="tdQuantidadeProduto"></td>
                         <td data-label="data" id="dataDoMeuProduto"></td>
+                        <td data-label="deletarValorTabela" id="deletarValorTabela"></td>
                       </tr>
                     </tbody>
                   </table>
