--- a/grud/index.html
+++ b/grud/index.html
@@ -7,12 +7,21 @@
     <meta name="keywords" content="cadastro de produtos, produtos, loja online, Sua Empresa">
     <title>Cadastro de Produtos</title>
     <link rel="stylesheet" href="src/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="shortcut icon" href="public/registro.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Cadastro de Produtos</h1>
+       <div class="botoes">
+        <ul class="bootoesEmCima">
+          <li><button type="button" class="btn btn-primary">Quantidade de produtos<p class="quantidadeProdutos"></p></button></li>
+          <li><button type="button" class="btn btn-danger">Danger</button></li>
+          <li></li>
+          <li></li>
+        </ul>
+       
+       </div>
     </header>
     <main>
         <section class="container">
@@ -154,5 +163,6 @@
     <footer>
     </footer>
     <script type="module" src="src/main.ts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
