salvando dados deletados ok.

--- a/grud/index.html
+++ b/grud/index.html
@@ -17,7 +17,7 @@
         <ul class="bootoesEmCima">
           <li><button type="button" class="btn btn-primary">Quantidade de produtos <p class="quantidadeProdutos"></p></button></li>
           <li><button type="button" class="btn btn-danger">Valor do estoque <p id="exibirPrecos"></p></button></li>
-          <li><button type="button" class="btn btn-secondary">Produtos deletados <p class="mostrarTotalDeletados">25</p></button></li>
+          <li><button type="button" class="btn btn-secondary">Produtos deletados <p class="mostrarTotalDeletados"></p></button></li>
           <li><button type="button" class="btn btn-success">Total de produtos por categoria <select name="" id="optionprodutos">
             <option value="Frutas frescas">Frutas frescas</option>
             <option value="Vegetais frescos">Vegetais frescos</option>
